--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Website coming soon!</h1>
-<p>i promise :P</p>
+<a href="http://www.oracle.com/us/technologies/java/overview/index.html"><img src="http://www.oracle.com/us/technologies/java/gimmejava/i-code-java-150x176-1705300.png" alt="I Code Java" border="0" width="150" height="176" /></a>
 </body>
 </html>
