--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Philip Johansson</title>
+</head>
 <body bgcolor="#A8A8A8">
 <h1>Website coming soon!</h1>
 <a href="http://www.oracle.com/us/technologies/java/overview/index.html"><img src="http://www.oracle.com/us/technologies/java/gimmejava/i-code-java-150x176-1705300.png" alt="I Code Java" border="0" width="150" height="176" /></a>
