--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Philip Johansson</title>
+  <META NAME="keywords" CONTENT="java, games, developer, programmer">
+  <META NAME="robot" CONTENT="noindex,nofollow">
 </head>
 <body bgcolor="#A8A8A8">
 <h1>Website coming soon!</h1>
