--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Philip Johansson</title>
-  <META NAME="keywords" CONTENT="java, games, developer, programmer">
-  <META NAME="robot" CONTENT="noindex,nofollow">
-</head>
-<body bgcolor="#A8A8A8">
-<h1>Website coming soon!</h1>
-<a href="http://www.oracle.com/us/technologies/java/overview/index.html"><img src="http://www.oracle.com/us/technologies/java/gimmejava/i-code-java-150x176-1705300.png" alt="I Code Java" border="0" width="150" height="176" /></a>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap 101 Template</title>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <h1>Hello, world!</h1>
+    <a href="http://www.oracle.com/us/technologies/java/overview/index.html"><img src="http://www.oracle.com/us/technologies/java/gimmejava/i-code-java-150x176-1705300.png" alt="I Code Java" border="0" width="150" height="176" /></a>
+    
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
