--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="http://getbootstrap.com/examples/theme/dist/css/bootstrap-theme.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="theme.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/examples/theme/theme.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -116,7 +116,7 @@
       <div class="page-header">
         <h1>Thumbnails</h1>
       </div>
-      <img data-src="holder.js/200x200" class="img-thumbnail" alt="A generic square placeholder image with a white border around it, making it resemble a photograph taken with an old instant camera">
+      <img data-src="http://getbootstrap.com/examples/theme/holder.js/200x200" class="img-thumbnail" alt="A generic square placeholder image with a white border around it, making it resemble a photograph taken with an old instant camera">
 
 
 
