--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <title>Website coming soon!</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="http://getbootstrap.com/examples/theme/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap theme -->
-    <link href="http://getbootstrap.com/examples/theme/dist/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/dist/css/bootstrap-theme.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="http://getbootstrap.com/examples/theme/theme.css" rel="stylesheet">
