--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <META NAME="robot" CONTENT="noindex,nofollow">
 </head>
 <body bgcolor="#A8A8A8">
-<div class="navbar navbar-default">
+<div class="navbar-default">
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
       <span class="icon-bar"></span>
