--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 <head>
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><![endif]-->
-    <title>Sprint - Responsive HTML5 Template</title>
-    <meta name="description" content="Sprint is free website template, responsive bootstrap, HTML5 CSS3 layout that can be used for any website.">
+    <title>Philip J - Portfolio</title>
     <meta name="viewport" content="width=device-width">
 
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet">
@@ -26,14 +25,13 @@
     <!--[if lt IE 7]>
     <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
     <![endif]-->
-	<!--  Free HTML5 Template by http://www.templatemo.com -->
     <div id="front">
         <div class="site-header">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-sm-6 col-xs-6">
                         <div id="templatemo_logo">
-                            <h1><a href="http://www.templatemo.com/page/1" title="HTML5 Template">Sprint</a></h1>
+                            <h1><a href="http://www.templatemo.com/page/1" title="HTML5 Template">Philip J</a></h1>
                         </div> <!-- /.logo -->
                     </div> <!-- /.col-md-4 -->
                     <div class="col-md-8 col-sm-6 col-xs-6">
@@ -41,8 +39,8 @@
                         <div class="main-menu">
                             <ul>
                                 <li><a href="#front">Home</a></li>
-                                <li><a href="#services">Services</a></li>
-                                <li><a href="#products">Products</a></li>
+                                <li><a href="#services">What i do</a></li>
+                                <li><a href="#products">Portfolio</a></li>
                                 <li><a href="#contact">Contact</a></li>
                             </ul>
                         </div> <!-- /.main-menu -->
@@ -54,9 +52,9 @@
                             <div class="main-menu">
                                 <ul>
                                     <li><a href="#front">Home</a></li>
-                                    <li><a href="#services">Services</a></li>
-                                    <li><a href="#products">Products</a></li>
-                                    <li><a href="#contact">Contact</a></li>
+                                	<li><a href="#services">What i do</a></li>
+                                	<li><a href="#products">Portfolio</a></li>
+                                	<li><a href="#contact">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -74,7 +72,7 @@
                     <div class="row">
                         <div class="col-md-12 text-right">
                             <div class="slider-caption">
-                                <h2>HTML5 CSS3 Template</h2>
+                                <h2>Website coming soon!</h2>
                             </div>
                         </div>
                     </div>
@@ -84,7 +82,7 @@
                 <img src="images/slider/slide2.jpg" alt="slider image 2">
                 <div class="container caption-wrapper">
                     <div class="slider-caption">
-                        <h2>Using Bootstrap Framework</h2>
+                        <h2>Website coming soon!</h2>
                     </div>
                 </div>
             </li>
@@ -94,7 +92,7 @@
                     <div class="row">
                         <div class="col-md-12 text-right">
                             <div class="slider-caption">
-                                <h2>Mobile Ready Website</h2>
+                                <h2>Website coming soon!</h2>
                             </div>
                         </div>
                     </div>
@@ -106,7 +104,7 @@
                     <div class="row">
                         <div class="col-md-12 text-right">
                             <div class="slider-caption">
-                                <h2>Responsive Layout</h2>
+                                <h2>Website coming soon!</h2>
                             </div>
                         </div>
                     </div>
@@ -118,7 +116,7 @@
                     <div class="row">
                         <div class="col-md-12 text-right">
                             <div class="slider-caption">
-                                <h2>Download and use it for free</h2>
+                                <h2>Website coming soon!</h2>
                             </div>
                         </div>
                     </div>
@@ -148,7 +146,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="service-item">
                         <span class="service-icon first"></span>
-                        <h3>Easy Customization</h3>
+                        <h3>Programming</h3>
                         <p>Cras congue orci at diam condimentum, in dignissim tellus elementum. Praesent id mauris eu urna vehicula rutrum sed in elit. Sed sed urna porta, viverra lacus in.</p>
                     </div> <!-- /.service-item -->
                 </div> <!-- /.col-md-3 -->
@@ -181,7 +179,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h1 class="section-title">New Products</h1>
+                    <h1 class="section-title">Stuff that i have made</h1>
                 </div> <!-- /.col-md-12 -->
             </div> <!-- /.row -->
             <div class="row">
@@ -219,7 +217,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h1 class="section-title">All Products</h1>
+                    <h1 class="section-title">My portfolio</h1>
                 </div> <!-- /.col-md-12 -->
             </div> <!-- /.row -->
             <div class="row">
@@ -411,6 +409,5 @@
     <script src="js/bootstrap.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
-    <!--  Free HTML5 Template by http://www.templatemo.com -->
 </body>
 </html>
