--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-6 col-xs-6">
                         <div id="templatemo_logo">
-                            <h1><a href="http://www.templatemo.com/page/1" title="HTML5 Template">Philip J</a></h1>
+                            <h1><a href="http://phille97.github.io" title="HTML5 Template">Philip J</a></h1>
                         </div> <!-- /.logo -->
                     </div> <!-- /.col-md-4 -->
                     <div class="col-md-8 col-sm-6 col-xs-6">
@@ -387,7 +387,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-sm-6">
-                    <span>Copyright &copy; 2084 <a href="#">Company Name</a> - <a href="http://www.templatemo.com/page/1">HTML5 Template</a> by <a href="http://www.templatemo.com/preview/templatemo_401_sprint" rel="nofollow">Sprint</a></span>
+                    <span>Copyright &copy; 2014 <a href="#"></a> - <a href="http://phille97.github.io">Philip Johansson</a></span>
                 </div> <!-- /.col-md-6 -->
                 <div class="col-md-6 col-sm-6">
                     <ul class="social">
