--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <META NAME="robot" CONTENT="noindex,nofollow">
 </head>
 <body bgcolor="#A8A8A8">
-<h1>Website coming soon!</h1>
+<applet code="Test.class" width="320" height="120">
+Make sure you have Java enabled in your browser!
+</applet>
 <a href="http://www.oracle.com/us/technologies/java/overview/index.html"><img src="http://www.oracle.com/us/technologies/java/gimmejava/i-code-java-150x176-1705300.png" alt="I Code Java" border="0" width="150" height="176" /></a>
 </body>
 </html>
