--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
-
 <head>
-
+   <meta http-equiv="refresh" content="0; url=http://suke.se" />
 </head>
-
 <body>
-
-   hai
-
 </body>
-
 </html>
