--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-   <meta http-equiv="refresh" content="0; url=http://suke.se" />
+   <meta http-equiv="refresh" content="0; url=http://trapet.me" />
 </head>
 <body>
 </body>
